# PersonalFinances

./: .dockerignore  .env.compose.example  .env.prod.example  .env_example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  ROADMAP.md  TECH_DEBT_RESOLUTIONS.md  dbt_project.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker_commands  filepaths.py  profiles.yml  pyproject.toml  todo  workspace.yaml
backend/: .dockerignore  .env_example  CLAUDE.md  Dockerfile  Makefile  dagster.yaml  pyproject.toml  workspace.yaml
backend/.claude/rules/: api.md  database.md  infrastructure.md  python.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0a6594cba516_add_trading212_history_tables.py  0c3f43741db0_recurring_patterns_redesign.py  0ce99eba4e62_add_standard_tags_fields.py  0d1c0abe3d33_add_manual_assets_tables.py  1570934fc13b_add_tags_tables.py  1ef7aace8974_convert_json_to_jsonb.py  204b49cb0781_add_financial_milestones_table.py  28663f2f3281_add_gc_transactions_table.py  28e8b4ad51ce_add_balances.py  3649be6e9b64_add_unified_transactions_table.py  50caa30626e4_init_v3.py  556b7afac9dd_add_planned_transactions_user_enabled_.py  55b6582091bd_add_jobs_table.py  56636dc452a2_add_gc_institutions_table.py  568c7aa09b4d_description.py  5dde6f1d2170_clear_detected_patterns.py  6430569b9b91_new_column_on_link_table_for_tracking_.py  6bc206b77d47_add_transaction_splits_and_user_note.py  72b3ded8075b_add_credit_limit_to_accounts.py  78c333d567f6_init_v2.py  7c5f0dbb0343_migrate_tag_rules_to_json_conditions.py  88fa944cb564_remove_transactions.py  96cd0af14534_add_job_metadata_to_jobs.py  9d0888e6e352_add_users_and_refresh_tokens.py  9f7b55f05a4f_adding_friendly_name_field.py  a1b2c3d4e5f6_add_unified_connections_accounts.py  a2b3c4d5e6f7_add_goal_tracking_modes.py  a6e1054b28c3_add_notifications_table.py  a946773cbd77_migrate_alerts_to_notifications.py  b07a1a168df0_add_planned_transactions_table.py  b2c3d4e5f6a7_unify_tags_and_splits.py  b6ce6a03986d_add_transaction_extract_date_column.py  b7d8e9f0a1b2_add_account_balance_fields.py  c088545ffdf6_add_tag_rules_table.py  c3d4e5f6a7b8_add_recurring_patterns.py  c6954cadbc4f_update_extract_date_to_date.py  c8e9f1a2b3c4_add_investment_fields_and_holdings.py  cd45397c9071_add_tag_id_to_recurring_patterns.py  cdc71e9eb6d7_add_balance_snapshots_table.py  d0021699d9f2_add_direction_to_recurring_patterns.py  (+12 more)
backend/dbt/: CLAUDE.md  bootstrap_duckdb.py  dbt_project.yml  profiles.yml
backend/dbt/models/1_source/: schema.yml  src_gocardless_account_balances.sql  src_gocardless_account_details.sql  src_gocardless_transactions.sql  src_institutions.sql  src_transaction_tags.sql
backend/dbt/models/2_staging/: schema.yml  stg_balance_snapshots.sql  stg_gocardless_all_transactions.sql  stg_unified_accounts.sql
backend/dbt/models/3_mart/: dim_accounts.sql  dim_tags.sql  fct_budget_forecast.sql  fct_budget_vs_actual.sql  fct_cash_flow_forecast.sql  fct_daily_balance_history.sql  fct_daily_spending_by_tag.sql  fct_goal_progress.sql  fct_monthly_trends.sql  fct_net_worth_history.sql  fct_recurring_patterns.sql  fct_spending_pace.sql  fct_transactions.sql  int_manual_asset_daily_values.sql  int_recurring_candidates.sql  schema.yml
backend/scripts/: __init__.py  bootstrap_duckdb.py  seed_demo.py  seed_dev.py  seed_gocardless.py  seed_user.py
backend/setup/dagster/: Dockerfile  dagster.yaml  entrypoint.sh  workspace.yaml
backend/src/: filepaths.py
backend/src/agent/: __init__.py  guardrails.py  llm.py  models.py  prompts.py  service.py
backend/src/api/: CLAUDE.md  app.py  dependencies.py  middleware.py  responses.py
backend/src/api/accounts/: __init__.py  endpoints.py  models.py
backend/src/api/agent/: __init__.py  endpoints.py  models.py
backend/src/api/alerts/: __init__.py  endpoints.py  models.py
backend/src/api/analytics/: __init__.py  endpoints.py  exports.py  forecasting.py  models.py  spending_pace.py
backend/src/api/auth/: __init__.py  endpoints.py  models.py
backend/src/api/budgets/: __init__.py  endpoints.py  models.py
backend/src/api/common/: __init__.py  helpers.py
backend/src/api/connections/: __init__.py  endpoints.py  models.py
backend/src/api/goals/: __init__.py  endpoints.py  models.py
backend/src/api/institutions/: __init__.py  endpoints.py  models.py
backend/src/api/jobs/: __init__.py  endpoints.py  models.py
backend/src/api/manual_assets/: __init__.py  endpoints.py  models.py
backend/src/api/milestones/: __init__.py  endpoints.py  models.py
backend/src/api/notifications/: __init__.py  endpoints.py  models.py
backend/src/api/planned_transactions/: __init__.py  endpoints.py  models.py
backend/src/api/recurring/: __init__.py  endpoints.py  models.py
backend/src/api/subscriptions/: __init__.py  endpoints.py  models.py
backend/src/api/tag_rules/: __init__.py  endpoints.py  models.py
backend/src/api/tags/: __init__.py  endpoints.py  models.py
backend/src/aws/: ssm_parameters.py
backend/src/duckdb/: __init__.py  client.py  manifest.py  queries.py  semantic.py
backend/src/metadata/: __init__.py  models.py  service.py
backend/src/orchestration/: CLAUDE.md  definitions.py  resources.py
backend/src/postgres/: CLAUDE.md  core.py
backend/src/telegram/: __init__.py  __main__.py  client.py  handlers.py  models.py  polling.py
backend/src/utils/: definitions.py  logging.py  security.py
backend/testing/: CLAUDE.md  conftest.py
backend/testing/agent/: test_guardrails.py  test_llm.py  test_service.py
backend/testing/api/: test_dependencies.py  test_tags.py
backend/testing/aws/: test_s3.py  test_ssm_parameters.py
backend/testing/duckdb/: test_manifest_semantic.py  test_semantic.py
backend/testing/metadata/: test_service.py
backend/testing/postgres/: test_core.py
backend/testing/telegram/: __init__.py  test_client.py  test_handlers.py  test_models.py  test_polling.py
backend/testing/utils/: test_definitions.py  test_logging.py  test_security.py
(+579 files in other folders)
