[project]
name = "personal_finances"
version = "0.1.0"

[tool.poetry]
name = "personal_finances"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
boto3 = "^1.41.5"
boto3-stubs = {extras = ["s3", "ssm"], version = "^1.41.5"}
inflection = "^0.5.1"
alembic = "^1.17.2"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
duckdb = "^1.4.2"
dbt-core = "^1.10.15"
dbt-duckdb = "^1.10.0"

[tool.poetry.group.db]
optional = false

[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
streamlit = "^1.45.1"
streamlit-aggrid = "^1.1.5.post1"
plotly = "^6.1.2"
dash = "^3.0.4"
dash-bootstrap-components = "^2.0.3"

[tool.poetry.group.dagster]
optional = false

[tool.poetry.group.dagster.dependencies]
dagster = "^1.12.3"
dagster-webserver = "^1.12.3"
dagster-graphql = "^1.12.3"

dagster-aws = "^0.28.3"
dagster-postgres = "^0.28.3"

[tool.poetry.group.checks]
optional = true

[tool.poetry.group.checks.dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.black]
line-length = 100

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default and more checks that we have selected
lint.select = ["E", "F", "N","D","PD","RUF","PL","NPY","PTH","RET","SIM"]
lint.ignore = ["D213","D203","E501","PD901", "PLC1901"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic"
]
lint.per-file-ignores = {"__init__.py" = ["D"]}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
exclude = ["alembic"]
warn_redundant_casts = true

disallow_incomplete_defs = true
disallow_untyped_defs = true

warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

ignore_missing_imports = true
